Fix mobile landing div overflow

--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -57,6 +57,11 @@ a:hover {
 
 .header-wrapper img {
     border-radius: 50%;
+    width: 64px;
+}
+
+.header-wrapper h1 {
+    font-size: 30px;
 }
 
 .header ul li {
