--- a/assets/styles/mobile.css
+++ b/assets/styles/mobile.css
@@ -45,7 +45,7 @@ footer {
 
 .header {
     width: 100%;
-    height: 80%;
+    height: 85%;
     background: #222222F9;
     position: relative;
 }
@@ -56,32 +56,45 @@ footer {
     margin: 0px auto;
     position: relative;
     padding: 30px;
+    padding-bottom: 0px;
 }
 
 .header-wrapper img {
     border-radius: 50%;
+    width: 58px;
+    display: block;
+    margin: 0px auto;
+}
+
+.header-wrapper h1 {
+    font-size: 22px;
+    text-align: center;
+}
+
+.header-wrapper p {
+    text-align: justify;
+}
+
+.header ul {
+    margin-top: 0px;
 }
 
 .header ul li {
-    vertical-align: middle;
     margin-right: 12px;
     padding-right: 15px;
-    line-height: 1.5;
+    line-height: 1.1;
     list-style-type: none;
-}
-
-.header ul li {
     display: block;
-    padding: 8px 0px;
+    padding: 5px 0px;
     text-align: center;
-    margin-bottom: 15px;
+    margin-bottom: 10px;
     width: 90%;
     border: 1px #2bbc8a solid;
 }
 
 .landing-content {
     width: 100%;
-    height: 20%;
+    height: 15%;
     background: #111111FD;
     position: relative;
     text-align: center;
@@ -90,7 +103,7 @@ footer {
 .content-container {
     width: 100%;
     margin: 0px auto;
-    padding-top: 4vh;
+    padding-top: 1.2vh;
 }
 
 .content-container h1 {
